package com.diguage.didp.facade;

/**
 * SubSystemFour 类
 *
 * @author D瓜哥, https://www.diguage.com/
 * @since 2017-05-19 17:53:34
 */
public class SubSystemFour {
  public void methodFour() {
    System.out.println("子系统四的方法");
  }
}
