package com.diguage.didp.facade;

/**
 * SubSystemThree 类
 *
 * @author D瓜哥, https://www.diguage.com/
 * @since 2017-05-19 17:53:34
 */
public class SubSystemThree {
  public void methodThree() {
    System.out.println("子系统三的方法");
  }
}
