package com.diguage.didp.facade;

/**
 * SubSystemTwo 类
 *
 * @author D瓜哥, https://www.diguage.com/
 * @since 2017-05-19 17:53:34
 */
public class SubSystemTwo {
  public void methodTwo() {
    System.out.println("子系统二的方法");
  }
}
